# internal/api/rest/converter/payment.go
@@ -11,6 +11,7 @@ func СonvertRegisterNotificationFromRest(req openapiEntities.Notification) logi
 		AccountToken:     req.AccountToken,
 		BankMemberID:     req.BankMemberID,
 		BankMemberName:   req.BankMemberName,
+		Details:          req.Details,
 		ErrorCode:        req.ErrorCode,
 		ExpDate:          req.ExpDate,
 		Message:          req.Message,
@@ -18,6 +19,8 @@ func СonvertRegisterNotificationFromRest(req openapiEntities.Notification) logi
 		OrderID:          req.OrderID,
 		Pan:              req.Pan,
 		PaymentID:        req.PaymentID,
+		PaymentURL:       req.PaymentURL,
+		RebillID:         req.RebillID,
 		RequestKey:       req.RequestKey,
 		Status:           req.Status,
 		TerminalKey:      req.TerminalKey,
