# openapi/models/notification.go
@@ -32,26 +32,35 @@ type Notification struct {
 	// card Id
 	CardID int64 `json:"CardId,omitempty"`
 
+	// details
+	Details string `json:"Details,omitempty"`
+
 	// error code
 	ErrorCode string `json:"ErrorCode,omitempty"`
 
 	// exp date
 	ExpDate string `json:"ExpDate,omitempty"`
 
-	// Краткое описание ошибки
+	// message
 	Message string `json:"Message,omitempty"`
 
 	// Код ошибки (<= 20 символов)
 	NotificationType string `json:"NotificationType,omitempty"`
 
-	// order ID
-	OrderID string `json:"OrderID,omitempty"`
+	// order Id
+	OrderID string `json:"OrderId,omitempty"`
 
 	// pan
 	Pan string `json:"Pan,omitempty"`
 
-	// payment ID
-	PaymentID string `json:"PaymentID,omitempty"`
+	// payment Id
+	PaymentID string `json:"PaymentId,omitempty"`
+
+	// payment URL
+	PaymentURL string `json:"PaymentURL,omitempty"`
+
+	// rebill Id
+	RebillID string `json:"RebillId,omitempty"`
 
 	// Идентификатор запроса на привязку счета
 	RequestKey string `json:"RequestKey,omitempty"`
@@ -65,7 +74,7 @@ type Notification struct {
 	// terminal key
 	TerminalKey string `json:"TerminalKey,omitempty"`
 
-	// Подпись запроса
+	// token
 	Token string `json:"Token,omitempty"`
 }
 
