# openapi/swagger.yaml
@@ -379,33 +379,10 @@ definitions:
 
   Notification:
     type: object
-    properties:
-      Success:
-          type: boolean  
-      Amount:
-          type: integer   
-      CardId:
-          type: integer   
-      PaymentID:
-          type: string
-      OrderID:
-          type: string
-      TerminalKey:
-          type: string
-      Status:
-          type: string
-      ErrorCode:
-          type: string
-      ExpDate:
-          type: string
-      Pan:
-          type: string
+    properties:  
       RequestKey:
         type: string
         description: Идентификатор запроса на привязку счета
-      Token:
-        type: string
-        description: Подпись запроса
       NotificationType:
         type: string
         description: Код ошибки (<= 20 символов)
@@ -418,9 +395,45 @@ definitions:
       BankMemberName:
         type: string
         description: Наименование банка-эмитента
+      TerminalKey:
+        type: string
+      Amount:
+        type: integer
+      OrderId:
+        type: string
+      Success:
+        type: boolean
+      Status:
+        type: string
+      PaymentId:
+        type: string
+      ErrorCode:
+        type: string
+      PaymentURL:
+        type: string
       Message:
         type: string
-        description: Краткое описание ошибки 
+      Details:
+        type: string
+      RebillId:
+        type: string
+      CardId:
+        type: integer
+      Pan:
+        type: string
+      ExpDate:
+        type: string
+      Token:
+        type: string
+      # DATA:
+      #   type: object
+      #   properties:
+      #     Route:
+      #       type: string
+      #     Source:
+      #       type: string
+      #     CreditAmount:
+      #       type: string
 
   Pagination:
     type: object
